
v0.0.9

* [BGBUILD-113] Allow to specify supported file formats for operating system plugin
* [BGBUILD-73] Add support for kickstart files

v0.0.8

* [BGBUILD-102] Start X on boot when X Window System group or base-x group is specified

v0.0.7

* [BGBUILD-87] Set default filesystem to ext4 for Fedora 13+

v0.0.6

* [BGBUILD-82] Root password not set when selinux packages are added

v0.0.5

* [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
* [BGBUILD-65] Allow to specify own repos overriding default repos provided for selected OS

v0.0.4

* [BGBUILD-46] Allow building 32 bit images on 64 bit arch

v0.0.3

* I'm not sure, really

v0.0.2

* First release
