@@ -1,6 +1,7 @@
 
 v0.0.9
 
+* [BGBUILD-59] Remove all image modifications user is not expecting
 * [BGBUILD-113] Allow to specify supported file formats for operating system plugin
 * [BGBUILD-73] Add support for kickstart files
 
